--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<!-- Instructions section -->
 	<div class="instructions">
-		<p>Enter a new item in the text box below. Use the button on the top right to add the item to the list! Use the buttons to delete items or mark them as complete.</p>
+		<p>Enter a new item in the text box below. Use the button on the right to add the item to the list! Use the list level buttons to delete items or mark them as complete.</p>
 	</div>
 	<!-- Input section -->
 	<div id="input-box">
